tests/builder/no_into.stderr
error[E0308]: mismatched types
  --> tests/builder/no_into.rs:11:57
   |
11 |     let example = Example::default().field1(1.0).field2("something");
   |                                                  ------ ^^^^^^^^^^^- help: try using a conversion method: `.to_string()`
   |                                                  |      |
   |                                                  |      expected `String`, found `&str`
   |                                                  arguments to this method are incorrect
   |
note: method defined here
  --> tests/builder/no_into.rs:7:5
   |
3  | #[derive(Debug, Default, Builder)]
   |                          -------
...
7  |     field2: String,
   |     ^^^^^^
